# python-binding-for-rust-interpreter

./: .gitignore  Cargo.toml  README.md
python/: app.py
test-boson-core/: Cargo.toml
test-boson-core/src/: operators.rs
test-boson-pyo3/: Cargo.toml  pyproject.toml
test-boson-pyo3/python/: app.py
test-boson-pyo3/src/: lib.rs
